fix: Add the margin for modals on mobile

--- a/src/cozy/_variables.scss
+++ b/src/cozy/_variables.scss
@@ -93,8 +93,8 @@ $modal-content-box-shadow-sm-up: $modal-content-box-shadow-xs;
 $modal-backdrop-bg: rgb(29, 33, 42); // grey-900
 $modal-backdrop-opacity:            .5;
 
-$modal-sm: 26rem;
-$modal-md: 34rem;
+$modal-sm: min(26rem, calc(100vw - 2rem));
+$modal-md: min(34rem, calc(100vw - 2rem));
 $modal-lg: 42rem;
 $modal-xl: 58rem;
 
